--- a/src/style.css
+++ b/src/style.css
@@ -26,17 +26,16 @@ main {
 }
 
 input {
-  width: 14%;
+  width: 200px;
   height: 40px;
-  padding-left: 20px;
   font-size: 15px;
   border-radius: 20px;
   border: 1px solid #d1cccc;
   margin: 15px;
   position: absolute;
-  right: 30px;
   top: 20px;
   display: flex;
+
 }
 
 
@@ -50,6 +49,7 @@ input {
 }
 
 .menu {
+  margin-top: 15px;
   width: 70px;
   border-radius: 50px;
   position: fixed;
@@ -78,7 +78,7 @@ input {
   left: -250px;
   position: fixed;
   transition: all 0.5s;
-  margin-top: 70px;
+  margin-top: 100px;
 }
 
 .chec[type="checkbox"]:checked + .imgmenu + .filtro01 {
@@ -150,13 +150,13 @@ input {
 .content h1 {
   margin-top: 0;
   font-size: 50px;
-  color: white;
+  color: bisque;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Adiciona uma sombra */
 }
 
 .content p {
   font-size: 20px;
-  color: white;
+  color: bisque;
   text-shadow: 2px 2px 4px rgba(243, 219, 2, 0.5); /* Adiciona uma sombra */
 }
 
@@ -257,347 +257,128 @@ input {
   font-size: 30px;
 }
 
-.display {
-  position: absolute;
-  width: 100%;
-  height: 259.99px;
-  background: #0e0d0d;
-  mix-blend-mode: saturation;
+
+
+@media screen and (max-width: 1200px) {
+  
+  body {
+    overflow: hidden;
+  }
+
+  input {
+    width: 170px;
+    height: 30px;
+    display: flex;
+    position: fixed;
+    margin-left: 10px;
+    margin-top: 0px;
+ }
+  .menu {
+    width: 70px;
+    border-radius: 60px;
+    display: none;
+    padding: 15px;
+    margin-top: 50px;
+    
+    
+  }
+  .filtro01 {
+    background-color: rgba(119, 111, 111, 0.5);
+    width: 180px;
+    height: 100%;
+    position: fixed;
+    margin-top: 100px;
+    left: 0;
+  }
+  .chec[type="checkbox"]:checked + .imgmenu + .filtro01 {
+    transform: none;
+  }
+
+  
+  .img{
+    display: none;
+  }
+  
+  main{
+    height: 100%; 
+  }A
+
+  .card-container{
+    display: block;
+  }
+
+  .card-front img{
+    width: 180px;
+  }
+  .card-back {
+    width: 150px;
+
+    box-sizing: border-box;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 10px;
+    transform: scaleX(-1);
+    overflow-y: auto; /* Adiciona uma barra de rolagem vertical */
+    max-height: 100%;
+  }
+  .card {
+    margin-right: 30px;
+    margin: 40px;
+    width: 200px;
+    cursor: pointer;
+    border-radius: 25px;
+    padding: 10px;
+    height: 320px;
+    justify-content: center;
+    border: 1px solid gray;
+    padding: 10px;
+    background-color: black;
+    justify-content: center;
+    align-items: center;
+    margin-top: -30px;
+  }
+  
+  .titulo{
+    position: fixed;
+    font-size: 20px;
+    margin-top: 70px;
+    margin-left: 10px;
+    background-color:bisque;
+    color: #0e0d0d;
+  }
+  /*introdução*/
+.content {
   display: flex;
-  align-items: center;
-  justify-content: center; /* Centralizar horizontalmente */
-  z-index: 1;
 }
 
-.displaytext {
+.content h1 {
+  margin-top: 30px;
+  margin-left: 20px;
+  font-size: 30px;
+  color:bisque;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Adiciona uma sombra */
+  white-space: nowrap; /* Impede que o texto quebre para a próxima linha */
+
+}
+
+
+.content p {
+  margin-left: 150px;
+  font-size: 15px;
+  color:bisque;
+  text-shadow: 2px 2px 4px rgba(243, 219, 2, 0.5); /* Adiciona uma sombra */
+}
+
+.imgcartas {
   position: relative;
-  text-align: center;
-  color: #ffffff;
+  float: right;
+  margin-right: 20px; /* Define a margem esquerda para criar espaço entre a imagem e o conteúdo */
+  filter: grayscale(60%) sepia(40%) brightness(80%) contrast(120%);
+}
 }
 
-.displaytext h2 {
-  margin-bottom: 10px; /* Ajuste a margem inferior conforme necessário */
-}
 
-.displaytext h3 {
-  margin-bottom: 5px; /* Ajuste a margem inferior conforme necessário */
-}
 
-.img {
-  background-image: url("/SAP010-data-lovers/src/tarotimag/cartas.png");
-  background-repeat: none;
-  background-size: cover;
-  width: 50%;
-  height: 100%;
-}
-.space{
-  position: relative;
-}
-
-.text {
-  width: 40vw;
-}
-
-@media screen and (max-width: 1350px) {
-  .text {
-    width: 50vw;
-  }
-}
-
-@media screen and (max-width: 1024px) {
-  body {
-    overflow: hidden;
-  }
-  .porcentage {
-    position: relative;
-    right: 550px;
-    text-align: right;
-    color:#FFFFFF;
-  }
-  
-  .menu {
-    width: 55px;
-    border-radius: 50px;
-    display: flex;
-    padding: 15px;
-  }
-  
-  .img{
-    width: 150px;
-    height: 100%;
-
-  }
-  
-  main{
-    height: 100%; 
-  }
-
-  .card-container{
-    display: block;
-    margin: 30%;
-  }
-
-  .card-back {
-    box-sizing: border-box;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    padding: 10px;
-    transform: scaleX(-1);
-    overflow-y: auto; /* Adiciona uma barra de rolagem vertical */
-    height: 500px; /* Define uma altura fixa para exibir a barra de rolagem */
-    max-height: 100%;
-    font: size 30px; ;
-  }
-  .card {
-    width: 300px;
-    cursor: pointer;
-    border-radius: 25px;
-    padding: 5px;
-    height: 545px;
-    justify-content: center;
-    border: 1px solid gray;
-    padding: 10px;
-    margin: 20px;
-    background-color: black;
-    justify-content: center;
-    align-items: center;
-    font-size: 30px;
-  }
-
-  .titulo{
-    margin: 100px;
-  }
-
-  p{
-    font-size: 30px;
-  }
-}
-
-@media screen and (max-width: 860px) {
-  body {
-    overflow: hidden;
-  }
-  .porcentage {
-    position: relative;
-    right: 550px;
-    text-align: right;
-    color:#FFFFFF;
-  }
-  
-  .menu {
-    width: 55px;
-    border-radius: 50px;
-    display: flex;
-    padding: 15px;
-  }
-  
-  .img{
-    width: 150px;
-    height: 100%;
-
-  }
-  
-  main{
-    height: 100%; 
-  }
-
-  .card-container{
-    display: block;
-    margin: 30%;
-  }
-
-  .card-back {
-    box-sizing: border-box;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    padding: 10px;
-    transform: scaleX(-1);
-    overflow-y: auto; /* Adiciona uma barra de rolagem vertical */
-    height: 500px; /* Define uma altura fixa para exibir a barra de rolagem */
-    max-height: 100%;
-    font: size 30px; ;
-  }
-  .card {
-    width: 300px;
-    cursor: pointer;
-    border-radius: 25px;
-    padding: 5px;
-    height: 545px;
-    justify-content: center;
-    border: 1px solid gray;
-    padding: 10px;
-    margin: 20px;
-    background-color: black;
-    justify-content: center;
-    align-items: center;
-    font-size: 30px;
-  }
-  
-  .titulo{
-    margin: 250px;
-  }
-
-  p{
-    font-size: 30px;
-  }
-  
-}
-
-@media screen and (max-width: 680px) {
-  body {
-    overflow: hidden;
-  }
-  .porcentage {
-    position: relative;
-    right: 550px;
-    text-align: right;
-    color:#FFFFFF;
-  }
-  
-  .menu {
-    width: 55px;
-    border-radius: 50px;
-    display: flex;
-    padding: 15px;
-  }
-  
-  .img{
-    display: none;
-  }
-  
-  main{
-    height: 100%; 
-  }
-
-  .card-container{
-    display: block;
-    margin: 30%;
-  }
-
-  .card-front img{
-    width: 150px;
-  }
-  .card-back {
-    box-sizing: border-box;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    padding: 10px;
-    transform: scaleX(-1);
-    overflow-y: auto; /* Adiciona uma barra de rolagem vertical */
-    height: 200px; /* Define uma altura fixa para exibir a barra de rolagem */
-    max-height: 100%;
-  }
-  .card {
-    width: 150px;
-    cursor: pointer;
-    border-radius: 25px;
-    padding: 5px;
-    height: 328px;
-    justify-content: center;
-    border: 1px solid gray;
-    padding: 10px;
-    margin: 20px;
-    background-color: black;
-    justify-content: center;
-    align-items: center;
-  }
- 
-  .titulo{
-    margin: 100px;
-  }
-}
-
-@media screen and (max-width: 480px) {
-  
-  body {
-    overflow: hidden;
-  }
-  .porcentage {
-    position: relative;
-    right: 550px;
-    text-align: right;
-    color:#FFFFFF;
-  }
-  
-  .menu {
-    width: 55px;
-    border-radius: 50px;
-    display: flex;
-    padding: 15px;
-  }
-  
-  .img{
-    display: none;
-  }
-  
-  main{
-    height: 100%; 
-  }
-
-  .card-container{
-    display: block;
-    margin: 30%;
-  }
-
-  .card-front img{
-    width: 150px;
-  }
-  .card-back {
-    box-sizing: border-box;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    padding: 10px;
-    transform: scaleX(-1);
-    overflow-y: auto; /* Adiciona uma barra de rolagem vertical */
-    height: 200px; /* Define uma altura fixa para exibir a barra de rolagem */
-    max-height: 100%;
-  }
-  .card {
-    width: 150px;
-    cursor: pointer;
-    border-radius: 25px;
-    padding: 5px;
-    height: 328px;
-    justify-content: center;
-    border: 1px solid gray;
-    padding: 10px;
-    margin: 20px;
-    background-color: black;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .titulo{
-    margin: 100px;
-  }
-}
-
-footer{
-  position:static;
-  bottom: 0;
-  width: 100vw;
-  height: 10vh;
-}
-
-.content{
-  height: 90%;
-}
-.cards_pages{
-  height: 100%;
-  top: 0;
-  position: absolute;
-  overflow-y: scroll;
-  width: 100%;
-}
